--- a/NewsPortal.Application/NewsPortal.Application.csproj
+++ b/NewsPortal.Application/NewsPortal.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NewsPortal.Domain\NewsPortal.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
